check in for firt build and test

--- a/knife/src/app/package.json
+++ b/knife/src/app/package.json
@@ -2,7 +2,7 @@
   "name": "knife",
   "version": "1.0.0",
   "description": "Its a test application for login.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "test"
   },
@@ -21,6 +21,15 @@
   },
   "homepage": "https://github.com/j-r-p/cosmos#readme",
   "dependencies": {
-    "angular-material": "^1.1.4"
+    "@uirouter/angularjs": "^1.0.4",
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
+    "angular-material": "^1.1.4",
+    "browserify": "^14.4.0",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-streamify": "^1.0.2",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
