commit for more changes in build

--- a/knife/src/app/package.json
+++ b/knife/src/app/package.json
@@ -2,7 +2,7 @@
   "name": "knife",
   "version": "1.0.0",
   "description": "Its a test application for login.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "test"
   },
