--- a/magnum/build.gradle
+++ b/magnum/build.gradle
@@ -1,3 +1,31 @@
 plugins {
     id 'org.springframework.boot' version '1.5.4.RELEASE'
 }
+
+apply plugin: 'java'
+
+sourceCompatibility = 1.8 
+targetCompatibility = 1.8
+
+jar {     
+	baseName = 'magnum'     
+	version =  '0.1.0' 
+	}
+
+dependencies {     
+     
+compile("org.springframework.boot:spring-boot-starter-web") 
+{         
+exclude module: "spring-boot-starter-tomcat"     
+}     
+compile("org.springframework.boot:spring-boot-starter-jetty")     
+     
+compile("org.springframework.boot:spring-boot-starter-actuator")     
+     
+testCompile("junit:junit") 
+}
+
+repositories {     
+mavenCentral() 
+}
+	
