--- a/ct/knife/src/app/package.json
+++ b/ct/knife/src/app/package.json
@@ -28,6 +28,7 @@
     "angular-material": "^1.1.4",
     "browserify": "^14.4.0",
     "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
     "vinyl-source-stream": "^1.1.0"
