--- a/ct/settings.gradle
+++ b/ct/settings.gradle
@@ -10,9 +10,11 @@
 
 /*
 // To declare projects as part of a multi-project build use the 'include' method
-include 'shared'
-include 'api'
+
 include 'services:webservice'
 */
 
-rootProject.name = 'cs'
+rootProject.name = 'ct'
+include 'knife'
+include 'magnum'
+
