--- a/ct/knife/src/app/package.json
+++ b/ct/knife/src/app/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/j-r-p/cosmos#readme",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.4",
+    "add-stream": "^1.0.0",
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
