--- a/ct/magnum/build.gradle
+++ b/ct/magnum/build.gradle
@@ -14,7 +14,7 @@ jar {
 
 
 dependencies {     
-     
+compile project(':streem')
 compile("org.springframework.boot:spring-boot-starter-web") 
 {         
 exclude module: "spring-boot-starter-tomcat"     
