--- a/ct/streem/build.gradle
+++ b/ct/streem/build.gradle
@@ -14,14 +14,20 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    //mavenCentral()
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+		compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE'
+		compile('org.hibernate:hibernate-core:4.3.6.Final')
+		compile('mysql:mysql-connector-java:5.1.31')
+		compile("org.springframework.boot:spring-boot-starter-web:1.5.4.RELEASE") 
+		{         
+		exclude module: "spring-boot-starter-tomcat"     
+		}
+		compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.2.2'
+		
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:21.0'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
