--- a/ct/knife/build.gradle
+++ b/ct/knife/build.gradle
@@ -22,6 +22,8 @@ gulp_build.dependsOn 'installGulp'
 // processes your package.json before running gulp build
 gulp_build.dependsOn 'npmInstall'
 
+//Comment
+
 
 
 
